# hydro-sense

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  rust-toolchain.toml  test.sh
.zed/: settings.json
src/: ads1115.rs  df0991.rs  i2c.rs  lib.rs  main.rs  temperature.rs
tests/: i2c_find_adapter_test.rs  i2c_read_10k_ntc.rs  i2c_read_df0991.rs  i2c_read_lm35dz.rs  i2c_write_df0991.rs  i2c_write_ssd1306.rs
tests/common/: mod.rs
